--- a/qaint.properties
+++ b/qaint.properties
@@ -1,4 +1,4 @@
 ############################################################################
-portal.url=https://www.google.com
+portal.url=https://xornet.xoriant.com/
 ############################################################################
 
